# witchnet-common

./: Cargo.toml  README.md
src/: algorithms.rs  connection.rs  data.rs  distances.rs  lib.rs  neuron.rs  polars.rs  sensor.rs
src/connection/: defining_connection.rs  inhibitory_connection.rs  mod.rs  sequential_connection.rs  similarity_connection.rs  universal_connection.rs
