[package]
name = "bionet-common"
version = "0.1.0"
edition = "2021"
authors = ["danbulnet <daniel@bulanda.net>"]

[dependencies]
dyn-clone = "1.0.9"
num-traits = "0.2.15"
polars = { version = "0.23.2", features = [ "zip_with", "csv-file", "temporal", "fmt", "dtype-slim" ] }

[dev-dependencies]
pretty_assertions = "1.2.1"